--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Milk Delivery – Home</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gradient-to-r from-blue-50 to-blue-100 min-h-screen flex flex-col">
+
+  <!-- Navbar -->
+  <nav class="bg-white shadow-md sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-blue-600 flex items-center gap-2">
+        🥛 Milk Delivery
+      </h1>
+      <div class="space-x-4">
+        <a href="index.html" class="text-gray-700 hover:text-blue-600">Home</a>
+        <a href="registration.html" class="text-gray-700 hover:text-blue-600">Register</a>
+        <a href="login.html" class="bg-blue-600 text-white px-4 py-2 rounded-xl hover:bg-blue-700">Login</a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <header class="flex-1 flex flex-col items-center justify-center text-center px-6 py-16">
+    <h2 class="text-4xl md:text-5xl font-extrabold text-gray-800 leading-tight">
+      Fresh Milk Delivered <span class="text-blue-600">to Your Doorstep</span>
+    </h2>
+    <p class="mt-4 text-lg text-gray-600 max-w-2xl">
+      Subscribe weekly or monthly. Our farmers deliver 100% pure, fresh milk every morning — 
+      safe, healthy, and hassle-free.
+    </p>
+    <div class="mt-6 flex gap-4">
+      <a href="registration.html" class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow hover:bg-blue-700">
+        Get Started
+      </a>
+      <a href="login.html" class="px-6 py-3 bg-white border border-gray-300 rounded-xl shadow hover:bg-gray-100">
+        Login
+      </a>
+    </div>
+  </header>
+
+  <!-- Features Section -->
+  <section class="bg-white py-16">
+    <div class="max-w-6xl mx-auto px-6 grid gap-10 md:grid-cols-3">
+      <div class="bg-blue-50 p-6 rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-bold text-blue-600">🥛 Fresh & Pure</h3>
+        <p class="mt-2 text-gray-600">Sourced directly from local farmers, ensuring freshness and quality every day.</p>
+      </div>
+      <div class="bg-green-50 p-6 rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-bold text-green-600">📅 Easy Subscription</h3>
+        <p class="mt-2 text-gray-600">Choose between weekly or monthly subscriptions with flexible quantities.</p>
+      </div>
+      <div class="bg-purple-50 p-6 rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-bold text-purple-600">🚚 Hassle-Free Delivery</h3>
+        <p class="mt-2 text-gray-600">Farmers deliver fresh milk at your doorstep — reliable and on time.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA Section -->
+  <section class="bg-gradient-to-r from-blue-600 to-blue-500 py-16 text-center text-white">
+    <h3 class="text-3xl md:text-4xl font-bold">Start Your Fresh Milk Subscription Today!</h3>
+    <p class="mt-3 text-lg">Healthy mornings begin with pure milk — delivered daily by our farmers.</p>
+    <a href="registration.html" class="mt-6 inline-block px-8 py-3 bg-white text-blue-600 font-bold rounded-xl shadow hover:bg-gray-100">
+      Subscribe Now
+    </a>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-gray-900 text-gray-300 py-6 text-center">
+    <p>© 2025 Milk Delivery. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
