--- a/user-registration.html
+++ b/user-registration.html
@@ -1,34 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register - Milqly</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Customer Registration – Milqly</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* tiny extra polish */
+    .form-input:focus { box-shadow: 0 6px 18px rgba(59,130,246,0.12); }
+  </style>
 </head>
-<body class="bg-gradient-to-r from-green-400 via-blue-400 to-purple-500 min-h-screen flex items-center justify-center">
-  <div class="bg-white shadow-2xl rounded-2xl p-8 w-full max-w-md">
-    <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Create Account</h2>
-    <form id="registerForm" class="space-y-4">
-      <input type="text" id="name" placeholder="Full Name" class="w-full px-4 py-2 rounded-lg border focus:ring-2 focus:ring-blue-400" required>
-      <input type="email" id="email" placeholder="Email Address" class="w-full px-4 py-2 rounded-lg border focus:ring-2 focus:ring-blue-400" required>
-      <input type="password" id="password" placeholder="Password" class="w-full px-4 py-2 rounded-lg border focus:ring-2 focus:ring-blue-400" required>
-      <input type="text" id="phone" placeholder="Phone Number" class="w-full px-4 py-2 rounded-lg border focus:ring-2 focus:ring-blue-400" required>
-      <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition">Register</button>
-    </form>
-    <p class="text-center text-gray-600 mt-4">
-      Already have an account? 
-      <a href="login.html" class="text-blue-600 font-semibold hover:underline">Login</a>
-    </p>
-  </div>
+<body class="min-h-screen bg-gradient-to-r from-blue-50 to-blue-100 flex flex-col">
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
+  <!-- NAV -->
+  <header class="bg-white shadow sticky top-0 z-30">
+    <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between h-16">
+      <div class="flex items-center gap-3">
+        <div class="w-9 h-9 rounded-md bg-blue-100 flex items-center justify-center text-blue-600 font-bold">🥛</div>
+        <span class="text-xl font-semibold text-blue-700">Milk Delivery</span>
+      </div>
+      <nav class="space-x-4 text-sm">
+        <a href="index.html" class="text-gray-700 hover:text-blue-600">Home</a>
+        <a href="login.html" class="text-blue-600 font-medium bg-white px-3 py-1 rounded-lg hover:bg-blue-50">Login</a>
+      </nav>
+    </div>
+  </header>
 
-  <script>
-    // ✅ Your Firebase Config
+  <!-- MAIN -->
+  <main class="flex-1 flex items-start justify-center py-12 px-4">
+    <div class="max-w-xl w-full">
+      <div class="bg-white rounded-2xl shadow-xl p-8 md:p-10">
+        <h1 class="text-3xl md:text-4xl font-extrabold text-center text-blue-600">Customer Registration</h1>
+        <p class="mt-2 text-center text-gray-600">Create your account to start fresh milk subscription</p>
+
+        <!-- Form -->
+        <form id="registerForm" class="mt-8 space-y-4">
+          <div>
+            <label class="text-sm font-medium text-gray-700">Full Name</label>
+            <input id="name" class="form-input mt-1 block w-full rounded-xl border border-gray-200 px-4 py-3 focus:outline-none" placeholder="Enter your full name" required>
+          </div>
+
+          <div>
+            <label class="text-sm font-medium text-gray-700">Email</label>
+            <input id="email" type="email" class="form-input mt-1 block w-full rounded-xl border border-gray-200 px-4 py-3 focus:outline-none" placeholder="Enter your email" required>
+          </div>
+
+          <div>
+            <label class="text-sm font-medium text-gray-700">Phone Number</label>
+            <input id="phone" type="tel" inputmode="tel"
+              class="form-input mt-1 block w-full rounded-xl border border-gray-200 px-4 py-3 focus:outline-none"
+              placeholder="Enter your phone number (10 digits)" required>
+          </div>
+
+          <div>
+            <label class="text-sm font-medium text-gray-700">Address</label>
+            <textarea id="address" rows="3" class="form-input mt-1 block w-full rounded-xl border border-gray-200 px-4 py-3 focus:outline-none" placeholder="Enter your delivery address" required></textarea>
+          </div>
+
+          <div>
+            <label class="text-sm font-medium text-gray-700">Password</label>
+            <input id="password" type="password" class="form-input mt-1 block w-full rounded-xl border border-gray-200 px-4 py-3 focus:outline-none" placeholder="Create a password (min 6 chars)" required>
+          </div>
+
+          <div>
+            <label class="text-sm font-medium text-gray-700">Subscription Plan</label>
+            <select id="plan" class="mt-1 block w-full rounded-xl border border-gray-200 px-4 py-3 focus:outline-none">
+              <option value="">Select Plan (optional)</option>
+              <option value="weekly">Weekly Subscription</option>
+              <option value="monthly">Monthly Subscription</option>
+            </select>
+          </div>
+
+          <div class="mt-4">
+            <button id="btnRegister" type="submit"
+              class="w-full rounded-xl bg-blue-600 hover:bg-blue-700 text-white font-semibold px-4 py-3 shadow">
+              Register
+            </button>
+          </div>
+
+          <p id="formMsg" class="text-sm mt-2 text-center"></p>
+
+          <p class="text-center text-gray-600 mt-1">
+            Already have an account?
+            <a href="login.html" class="text-blue-600 font-medium hover:underline">Login here</a>
+          </p>
+        </form>
+      </div>
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="bg-white border-t">
+    <div class="max-w-6xl mx-auto px-4 py-6 text-center text-sm text-gray-500">
+      © 2025 Milk Delivery. All rights reserved.
+    </div>
+  </footer>
+
+  <!-- Firebase (modular) -->
+  <script type="module">
+    // ----- Firebase imports -----
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
+    import { getAuth, createUserWithEmailAndPassword, updateProfile } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
+    import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+
+    // ----- Your Firebase Config (provided) -----
     const firebaseConfig = {
       apiKey: "AIzaSyCayl1Hkzf7krOjqlxqWEbBpNZC8m41BBk",
       authDomain: "milqly.firebaseapp.com",
@@ -39,35 +114,76 @@
       measurementId: "G-Z576VSVC5J"
     };
 
-    // ✅ Init Firebase
-    const app = firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
+    // ----- Initialize -----
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
 
-    // ✅ Handle Registration
-    document.getElementById("registerForm").addEventListener("submit", async (e) => {
+    // ----- UI helpers -----
+    const $ = id => document.getElementById(id);
+    const formMsg = $("formMsg");
+    function setMsg(text, ok=false){
+      formMsg.textContent = text || "";
+      formMsg.className = ok ? "text-sm mt-2 text-green-600" : "text-sm mt-2 text-red-600";
+    }
+
+    // ----- Registration logic -----
+    $("registerForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-      const name = document.getElementById("name").value;
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      const phone = document.getElementById("phone").value;
+      setMsg("");
+
+      const name = $("name").value.trim();
+      const email = $("email").value.trim().toLowerCase();
+      const phone = $("phone").value.trim();
+      const address = $("address").value.trim();
+      const password = $("password").value;
+      const plan = $("plan").value || null;
+
+      // Basic validation
+      if (!name || !email || !phone || !address || !password) {
+        return setMsg("Please fill all required fields.");
+      }
+      if (!/^\d{10}$/.test(phone)) {
+        return setMsg("Phone must be 10 digits.");
+      }
+      if (password.length < 6) {
+        return setMsg("Password must be at least 6 characters.");
+      }
+
+      // Disable button while processing
+      const btn = $("btnRegister");
+      btn.disabled = true;
+      btn.classList.add("opacity-70", "cursor-not-allowed");
 
       try {
-        const userCredential = await auth.createUserWithEmailAndPassword(email, password);
-        const user = userCredential.user;
+        // Create user in Firebase Auth (this also signs them in)
+        const cred = await createUserWithEmailAndPassword(auth, email, password);
 
-        await db.collection("users").doc(user.uid).set({
+        // Set display name in Auth profile
+        await updateProfile(cred.user, { displayName: name });
+
+        // Create Firestore user doc
+        const userRef = doc(db, "users", cred.user.uid);
+        await setDoc(userRef, {
           name,
           email,
           phone,
+          address,
           role: "user",
-          createdAt: new Date()
+          preferredPlan: plan,
+          createdAt: serverTimestamp()
         });
 
-        alert("✅ Registration successful! Redirecting to login...");
-        window.location.href = "login.html";
-      } catch (error) {
-        alert("❌ Error: " + error.message);
+        // Success — redirect to dashboard
+        setMsg("Registration successful — redirecting to dashboard...", true);
+        setTimeout(() => {
+          window.location.href = "user-dashboard.html";
+        }, 1100);
+
+      } catch (err) {
+        setMsg(err && err.message ? err.message : "Registration failed.");
+        btn.disabled = false;
+        btn.classList.remove("opacity-70", "cursor-not-allowed");
       }
     });
   </script>
