--- a/user-login.html
+++ b/user-login.html
@@ -3,30 +3,96 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Milqly</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>User Login - Milk Delivery</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: #f0f4ff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .navbar {
+      background: #ffffff;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    .navbar-brand {
+      font-weight: bold;
+      color: #0d6efd !important;
+      font-size: 1.5rem;
+    }
+    .form-container {
+      max-width: 450px;
+      margin: 60px auto;
+      padding: 30px;
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0px 4px 15px rgba(0,0,0,0.1);
+    }
+    .form-title {
+      text-align: center;
+      font-weight: bold;
+      margin-bottom: 10px;
+      color: #0d6efd;
+    }
+    .form-subtitle {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #555;
+    }
+    .btn-primary {
+      width: 100%;
+      border-radius: 10px;
+      padding: 10px;
+    }
+    .extra-links {
+      text-align: center;
+      margin-top: 15px;
+    }
+    .extra-links a {
+      text-decoration: none;
+      color: #0d6efd;
+    }
+  </style>
 </head>
-<body class="bg-gradient-to-r from-purple-500 via-pink-500 to-red-500 min-h-screen flex items-center justify-center">
-  <div class="bg-white shadow-2xl rounded-2xl p-8 w-full max-w-md">
-    <h2 class="text-3xl font-bold text-center text-purple-600 mb-6">Welcome Back</h2>
-    <form id="loginForm" class="space-y-4">
-      <input type="email" id="email" placeholder="Email Address" class="w-full px-4 py-2 rounded-lg border focus:ring-2 focus:ring-purple-400" required>
-      <input type="password" id="password" placeholder="Password" class="w-full px-4 py-2 rounded-lg border focus:ring-2 focus:ring-purple-400" required>
-      <button type="submit" class="w-full bg-purple-600 text-white py-2 rounded-lg hover:bg-purple-700 transition">Login</button>
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">🥛 Milk Delivery</a>
+      <div class="d-flex">
+        <a href="user-register.html" class="btn btn-outline-primary me-2">Register</a>
+        <a href="user-login.html" class="btn btn-primary">Login</a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Login Form -->
+  <div class="form-container">
+    <h2 class="form-title">User Login</h2>
+    <p class="form-subtitle">Login to manage your subscription</p>
+    
+    <form id="loginForm">
+      <div class="mb-3">
+        <label>Email</label>
+        <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
+      </div>
+      <div class="mb-3">
+        <label>Password</label>
+        <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
+      </div>
+      <button type="submit" class="btn btn-primary">Login</button>
     </form>
-    <p class="text-center text-gray-600 mt-4">
-      Don’t have an account? 
-      <a href="register.html" class="text-purple-600 font-semibold hover:underline">Register</a>
-    </p>
+
+    <div class="extra-links">
+      <p>Don't have an account? <a href="user-register.html">Register here</a></p>
+    </div>
   </div>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
-
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
   <script>
-    // ✅ Firebase Config
+    // Your Firebase Config
     const firebaseConfig = {
       apiKey: "AIzaSyCayl1Hkzf7krOjqlxqWEbBpNZC8m41BBk",
       authDomain: "milqly.firebaseapp.com",
@@ -37,37 +103,24 @@
       measurementId: "G-Z576VSVC5J"
     };
 
-    // ✅ Init Firebase
+    // Init Firebase
     const app = firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
-    const db = firebase.firestore();
 
-    // ✅ Handle Login
-    document.getElementById("loginForm").addEventListener("submit", async (e) => {
+    // Login Function
+    document.getElementById("loginForm").addEventListener("submit", function(e) {
       e.preventDefault();
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
 
-      try {
-        const userCredential = await auth.signInWithEmailAndPassword(email, password);
-        const user = userCredential.user;
-
-        const doc = await db.collection("users").doc(user.uid).get();
-        if (doc.exists) {
-          const userData = doc.data();
-          if (userData.role === "user") {
-            alert("✅ Login successful! Redirecting to dashboard...");
-            window.location.href = "userDashboard.html";
-          } else {
-            alert("❌ You are not authorized as a User.");
-            await auth.signOut();
-          }
-        } else {
-          alert("❌ No user data found!");
-        }
-      } catch (error) {
-        alert("❌ Error: " + error.message);
-      }
+      auth.signInWithEmailAndPassword(email, password)
+        .then((userCredential) => {
+          alert("Login Successful ✅");
+          window.location.href = "user-dashboard.html"; // Redirect after login
+        })
+        .catch((error) => {
+          alert("Error: " + error.message);
+        });
     });
   </script>
 </body>
